@@ -15,8 +15,8 @@
 /* Bump-up with each new version */
 #define wxMAJOR_VERSION    2
 #define wxMINOR_VERSION    1
-#define wxRELEASE_NUMBER   11
-#define wxVERSION_STRING "wxWindows 2.1.11"
+#define wxRELEASE_NUMBER   12
+#define wxVERSION_STRING "wxWindows 2.1.12"
 #define wxVERSION_NUMBER (wxMAJOR_VERSION * 1000) + (wxMINOR_VERSION * 100) + wxRELEASE_NUMBER
 #define wxBETA_NUMBER      0
 #define wxVERSION_FLOAT wxMAJOR_VERSION + (wxMINOR_VERSION/10.0) + (wxRELEASE_NUMBER/100.0) + (wxBETA_NUMBER/10000.0)
